# learn-opengl-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: camera.rs  main.rs  mesh.rs  model.rs  shader.rs
src/_1_getting_started/: README.md  _1_1_hello_window.rs  _1_1_hello_window_clear.rs  _2_1_hello_triangle.rs  _2_2_hello_triangle_indexed.rs  _2_3_hello_triangle_exercise1.rs  _2_4_hello_triangle_exercise2.rs  _2_5_hello_triangle_exercise3.rs  _3_1_shaders_uniform.rs  _3_2_shaders_interpolation.rs  _3_3_shaders_class.rs  _3_4_shaders_exercise1.rs  _3_5_shaders_exercise2.rs  _3_6_shaders_exercise3.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_3_textures_exercise1.rs  _4_4_textures_exercise2.rs  _4_5_textures_exercise3.rs  _4_6_textures_exercise4.rs  _5_1_transformations.rs  _5_2_transformations_exercise1.rs  _5_3_transformations_exercise2.rs  _6_1_coordinate_systems.rs  _6_2_coordinate_systems_depth.rs  _6_3_coordinate_systems_multiple.rs  _6_4_coordinate_systems_exercise3.rs  _7_1_camera_circle.rs  _7_2_camera_keyboard_dt.rs  _7_3_camera_mouse_zoom.rs  _7_4_camera_class.rs  _7_5_camera_exercise1.rs  _7_6_camera_exercise2.rs  mod.rs
src/_2_lighting/: README.md  _1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_specular.rs  _2_3_basic_lighting_exercise1.rs  _2_4_basic_lighting_exercise2.rs  _2_5_basic_lighting_exercise3.rs  _3_1_materials.rs  _3_2_materials_exercise1.rs  _4_1_lighting_maps_diffuse_map.rs  _4_2_lighting_maps_specular_map.rs  _4_3_lighting_maps_exercise2.rs  _4_4_lighting_maps_exercise4.rs  _6_1_multiple_lights.rs  (+6 more)
(+11 files in other folders)
