[package]
authors = ["Tommy Lau <tommy.lhg@gmail.com>"]
name = "learn-opengl-rs"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.43.0"
image = "0.24.1"
nalgebra-glm = "0.16.0"
