[package]
authors = ["Tommy Lau <tommy.lhg@gmail.com>"]
name = "learn-opengl-rs"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.44.0"
image = "0.24.1"
nalgebra-glm = "0.16.0"

[profile.release]
strip = "symbols"
